Fetch 10 most probable results returns as a string
